Created style.css file, linked to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Fake Google</title>
+    <style rel="stylesheet" type="text/css" href="style.css">
+    </style>
   </head>
   <body>
-
+    <center>
+    	<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    </center>
   </body>
 </html>
