fixed wrong linking, styled search box form.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Fake Google</title>
-    <style rel="stylesheet" type="text/css" href="style.css">
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    </link>
   </head>
   <body>
     <center>
-    	<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    <div id="logo">
+	     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    </div>
+    <div id="search-box-div">
+      <input type="text" name="" value="">
+    </div>
     </center>
   </body>
 </html>
