Further changes to positioning and styling of searchbox, addition of id attribute to allow styling also.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <center>
-    <div id="logo">
-	     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    <div id="logo-div">
+	     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
     <div id="search-box-div">
       <input type="text" name="" value="">
