ADded in buttons, added in styling for buttons.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div id="search-box-div">
       <input type="text" name="" value="">
     </div>
+    <div class="buttonsdiv">
+      <center>
+        <input type="submit" class="button" name="Search" value="">
+        <input type="submit" class="button" name="I'm feeling lucky!" value="">
+      </center>
+    </div>
     </center>
   </body>
 </html>
