Added in highlighing of the buttons, implemented class tagging to be able to tag buttons.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="buttonsdiv">
       <center>
-        <input type="submit" class="button" name="Search" value="">
-        <input type="submit" class="button" name="I'm feeling lucky!" value="">
+        <input type="submit" class="button" value="Google Search" value="">
+        <input type="submit" class="button" value="I'm feeling lucky!" value="">
       </center>
     </div>
     </center>
