added in google language links.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <input type="submit" class="button" value="I'm feeling lucky!" value="">
       </center>
     </div>
+    <div class="language-select">
+      Google offered in:
+      <a href="">Nederlands</a>
+      <a href="">Français</a>
+      <a href="">Deutsch</a>
+    </div>
     </center>
   </body>
 </html>
