Implemented div layout for bottom footer.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       <a href="">Français</a>
       <a href="">Deutsch</a>
     </div>
+    <div class="footer-wrapper">
+      <div class="footer">
+        <div class="secondary-footer-wrapper">
+          <div class="secondary-footer">
+
+          </div>
+        </div>
+      </div>
+    </div>
     </center>
   </body>
 </html>
