positioned first span with location correctly.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="footer">
         <div class="secondary-footer-wrapper">
           <div class="secondary-footer">
-
+            <span class="location-span">Belgium</span>
           </div>
         </div>
       </div>
