Finished final bar of the footer.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
             <span class="location-span">Belgium</span>
           </div>
         </div>
+        <span class="options">
+          <a class="option">Advertising</a>
+          <a class="option">Business</a>
+          <a class="option">About</a>
+          <a class="option">How search works</a>
+        </span>
+        <span class="info-guff">
+          <a class="option">Privacy</a>
+          <a class="option">Terms</a>
+          <a class="option">Settings</a>
+        </span>
       </div>
     </div>
     </center>
