redoing css styling, trying out different workflow now.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <center>
+    <div class="uppernavbar">
+      <div class="flexbox">
+        <a class="option">Gmail</a>
+        <a class="option">Images</a>
+      </div>
+      <div class="img">
+        <div id="more-button"></div>
+        <a class="option" class="blue-button">Sign in</a>
+      </div>
+    </div>
     <div id="logo-div">
 	     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
