Changed upper nav bar to list type in html.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
   <body>
     <center>
     <div class="uppernavbar">
-      <div class="flexbox">
-        <a class="option">Gmail</a>
-        <a class="option">Images</a>
-      </div>
-      <div class="img">
-        <div id="more-button"></div>
-        <a class="option" class="blue-button">Sign in</a>
-      </div>
+      <ul>
+        <li class="list-element"><a>Gmail</a></li>
+        <li class="list-element"><a>Images</a></li>
+        <li class="list-element"><a id="more-button"></a></li>
+        <li class="list-element"><a class="blue-button">Sign in</a></li>
+      </ul>
     </div>
-    <div id="logo-div">
+    <div id="logo">
 	     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
     <div id="search-box-div">
@@ -43,17 +41,17 @@
             <span class="location-span">Belgium</span>
           </div>
         </div>
-        <span class="options">
-          <a class="option">Advertising</a>
-          <a class="option">Business</a>
-          <a class="option">About</a>
-          <a class="option">How search works</a>
-        </span>
-        <span class="info-guff">
-          <a class="option">Privacy</a>
-          <a class="option">Terms</a>
-          <a class="option">Settings</a>
-        </span>
+        <ul>
+          <li class="list-element"><a class="option">Advertising</a></li>
+          <li class="list-element"><a class="option">Business</a></li>
+          <li class="list-element"><a class="option">About</a></li>
+          <li class="list-element"><a class="option">How search works</a></li>
+        </>
+        <ul>
+          <li class="list-element"><a class="option">Privacy</a></li>
+          <li class="list-element"><a class="option">Terms</a></li>
+          <li class="list-element"><a class="option">Settings</a></li>
+        </ul>
       </div>
     </div>
     </center>
