styled buttons, this has broken sign in button somewhat but will fix next commit.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="list-element"><a>Gmail</a></li>
         <li class="list-element"><a>Images</a></li>
         <li class="list-element"><a id="more-button"></a></li>
-        <li class="list-element"><a class="blue-button">Sign in</a></li>
+        <li class="list-element"><input type="submit" class="button" value=""></li>
       </ul>
     </div>
     <div id="logo">
@@ -38,19 +38,19 @@
       <div class="footer">
         <div class="secondary-footer-wrapper">
           <div class="secondary-footer">
-            <span class="location-span">Belgium</span>
+            <a>Belgium</a>
           </div>
         </div>
-        <ul>
-          <li class="list-element"><a class="option">Advertising</a></li>
-          <li class="list-element"><a class="option">Business</a></li>
-          <li class="list-element"><a class="option">About</a></li>
-          <li class="list-element"><a class="option">How search works</a></li>
-        </>
-        <ul>
-          <li class="list-element"><a class="option">Privacy</a></li>
-          <li class="list-element"><a class="option">Terms</a></li>
-          <li class="list-element"><a class="option">Settings</a></li>
+        <ul id="left-options">
+          <li class="list-element"><a>Advertising</a></li>
+          <li class="list-element"><a>Business</a></li>
+          <li class="list-element"><a>About</a></li>
+          <li class="list-element"><a>How search works</a></li>
+        </ul>
+        <ul id="right-options">
+          <li class="list-element"><a>Privacy</a></li>
+          <li class="list-element"><a>Terms</a></li>
+          <li class="list-element"><a>Settings</a></li>
         </ul>
       </div>
     </div>
