moved styling to class tag, changed Sign In back to <a>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="list-element"><a>Gmail</a></li>
         <li class="list-element"><a>Images</a></li>
         <li class="list-element"><a id="more-button"></a></li>
-        <li class="list-element"><input type="submit" class="button" value=""></li>
+        <li class="list-element"><a class="button" id="Sign-in-button">Sign in</a></li>
       </ul>
     </div>
     <div id="logo">
