Overrode default focus styling, added in main searchbox stylings.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div id="logo">
 	     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
-    <div id="search-box-div">
+    <div id="search-box">
       <input type="text" name="" value="">
     </div>
-    <div class="buttonsdiv">
+    <div class="buttonsdiv" style="padding: 18px">
       <center>
         <input type="submit" class="button" value="Google Search" value="">
         <input type="submit" class="button" value="I'm feeling lucky!" value="">
