Added some inline styling for footer.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="footer-wrapper">
       <div class="footer">
         <div class="secondary-footer-wrapper">
-          <div class="secondary-footer">
-            <a>Belgium</a>
+          <div style="display: flex;">
+            <a style="font-size: 15px; padding-left: 15px;">Belgium</a>
           </div>
         </div>
         <ul id="left-options">
