--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     </link>
   </head>
-  <body>
+  <body style ="padding: 0; margin: 0;">
     <center>
     <div class="uppernavbar">
       <ul>
